--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,26 +8,32 @@ permissions:
   contents: write
 
 jobs:
-  release:
-    runs-on: ubuntu-22.04
+  test:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Login to AliyunCS
-        uses: docker/login-action@v1
-        with:
-          registry: registry.cn-beijing.aliyuncs.com
-          username: ${{ secrets.ALI_USER  }}
-          password: ${{ secrets.ALI_PASSWORD  }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: sync-to-aliyuncs
-        run: |
-          docker pull docker.io/mereith/van-blog:latest
-          docker tag "docker.io/mereith/van-blog:latest" "registry.cn-beijing.aliyuncs.com/mereith/van-blog:test"
-          docker push "registry.cn-beijing.aliyuncs.com/mereith/van-blog:test"
+      - name: 打包镜像并推送
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          build-args: |
+            VAN_BLOG_BUILD_SERVER=http://localhost:3000
+            VAN_BLOG_VERSIONS=test
+          platforms: linux/amd64
+          push: true
+          tags: |
+            "docker.io/mereith/van-blog:test"
