--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "release": "standard-version",
-    "release-doc": "node releaseDoc.js",
+    "release-doc": "node scripts/releaseDoc.js",
     "release-major": "standard-version --release-as major",
     "release-minor": "standard-version --release-as minor",
     "release-patch": "standard-version --release-as patch",
