feat: 后台编辑器改为 bytemd，性能更好支持更多语法

--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -55,11 +55,21 @@
     "@ant-design/pro-form": "^1.64.0",
     "@ant-design/pro-layout": "^6.35.0",
     "@ant-design/pro-table": "^2.71.0",
+    "@bytemd/plugin-breaks": "^1.17.2",
+    "@bytemd/plugin-frontmatter": "^1.17.2",
+    "@bytemd/plugin-gemoji": "^1.17.2",
+    "@bytemd/plugin-gfm": "^1.17.2",
+    "@bytemd/plugin-highlight": "^1.17.2",
+    "@bytemd/plugin-math": "^1.17.2",
+    "@bytemd/plugin-medium-zoom": "^1.17.2",
+    "@bytemd/plugin-mermaid": "^1.17.2",
+    "@bytemd/react": "^1.17.2",
     "@umijs/route-utils": "^2.0.0",
     "antd": "^4.19.0",
     "antd-img-crop": "^4.2.4",
     "btoa": "^1.2.1",
     "classnames": "^2.3.0",
+    "github-markdown-css": "^5.1.0",
     "lodash": "^4.17.0",
     "moment": "^2.29.0",
     "omit.js": "^2.0.2",
@@ -72,8 +82,7 @@
     "react-dev-inspector": "^1.7.0",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.2.0",
-    "umi": "^3.5.0",
-    "vditor": "^3.8.15"
+    "umi": "^3.5.0"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.1.0",
