--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -11,6 +11,7 @@
     "dayjs": "^1.11.3",
     "headroom.js": "^0.12.0",
     "markdown-navbar": "^1.4.3",
+    "mermaid": "^9.1.6",
     "next": "latest",
     "react": "18.1.0",
     "react-burger-menu": "^3.0.8",
