--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     restart: always
     environment:
       TZ: "Asia/Shanghai"
+      # 如果你改了这两个，那上面的数据库连接地址也要同步修改。
       MONGO_INITDB_ROOT_USERNAME: vanBlog
       MONGO_INITDB_ROOT_PASSWORD: vanBlog
     volumes:
