--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -31,6 +31,7 @@
     "@nestjs/swagger": "^5.2.1",
     "@types/line-reader": "^0.0.34",
     "axios": "^0.27.2",
+    "compressing": "^1.6.2",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.4",
     "image-size": "^1.0.2",
