--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "sync-aliyun": "bash scripts/sync-aliyuncs.sh",
     "build:test": "act -j test --secret-file=.env",
+    "webhook": "node scripts/webhook.js",
     "release:local": "act -j local-build --secret-file=.env",
     "release": "standard-version",
     "release-note": "node scripts/releaseNote.js",
