--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -72,6 +72,8 @@
     "github-markdown-css": "^5.1.0",
     "lodash": "^4.17.0",
     "moment": "^2.29.0",
+    "monaco-editor": "^0.34.0",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "omit.js": "^2.0.2",
     "pinyin-match": "^1.2.2",
     "rc-menu": "^9.1.0",
@@ -82,6 +84,7 @@
     "react-dev-inspector": "^1.7.0",
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.2.0",
+    "react-monaco-editor": "^0.50.1",
     "umi": "^3.5.0"
   },
   "devDependencies": {
