--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,6 +35,7 @@
     "crypto": "^1.0.1",
     "dayjs": "^1.11.4",
     "image-size": "^1.0.2",
+    "js-base64": "^3.7.2",
     "line-reader": "^0.4.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.4",
