--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -13,6 +13,7 @@
     "@waline/client": "^2.6.1",
     "dayjs": "^1.11.3",
     "headroom.js": "^0.12.0",
+    "js-base64": "^3.7.2",
     "markdown-navbar": "^1.4.3",
     "mermaid": "^9.1.6",
     "next": "latest",
