docs: 完善一下部署教程

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -40,3 +40,6 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: vanBlog
     volumes:
       - ${PWD}/data/mongo:/data/db
+    # 如果你向在外部访问数据库，并且已经设置了强密码，那可以取消下面的注释
+    # ports:
+      # - 27017:27017
