--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Get version
+        id: get_version
+        run: |
+          TIMEVERSION=$(date "+%Y%m%d-%H%M%S")
+          echo ::set-output name=VERSION::${TIMEVERSION}
+      - name: 展示版本
+        run: echo ${{ steps.get_version.outputs.VERSION }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
@@ -36,4 +43,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            "docker.io/mereith/van-blog:test-0902"
+            "docker.io/mereith/van-blog:${{ steps.get_version.outputs.VERSION }}"
