feat: 支持 RSS 订阅（小尺寸管理员按钮转移到了抽屉导航栏中）

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -35,10 +35,15 @@
     "compressing": "^1.6.2",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.4",
+    "feed": "^4.2.2",
+    "highlight.js": "^11.6.0",
     "image-size": "^1.0.2",
     "js-base64": "^3.7.2",
     "line-reader": "^0.4.0",
     "lodash": "^4.17.21",
+    "markdown-it": "^13.0.1",
+    "markdown-it-katex": "^2.0.3",
+    "markdown-it-task-lists": "^2.1.1",
     "mongoose": "^6.3.4",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
