--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -8,13 +8,13 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^12.2.5",
+    "@types/lodash": "^4.14.184",
     "@types/markdown-navbar": "^1.4.0",
     "@types/mermaid": "^8.2.9",
     "@waline/client": "^2.6.1",
     "dayjs": "^1.11.3",
     "headroom.js": "^0.12.0",
     "js-base64": "^3.7.2",
-    "markdown-navbar": "^1.4.3",
     "mermaid": "^9.1.6",
     "next": "latest",
     "react": "18.1.0",
