--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -39,6 +39,7 @@
     "highlight.js": "^11.6.0",
     "image-size": "^1.0.2",
     "js-base64": "^3.7.2",
+    "js-sha256": "^0.9.0",
     "line-reader": "^0.4.0",
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
