feat: 支持高亮块语法（老费劲了） #37

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -29,6 +29,8 @@
     "react-use": "^17.4.0",
     "rehype-katex": "^6.0.2",
     "rehype-raw": "^6.1.1",
+    "remark-directive": "^2.0.1",
+    "remark-directive-rehype": "^0.4.0",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "sharp": "^0.30.7"
