--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -87,7 +87,9 @@
     "react-dom": "^17.0.0",
     "react-helmet-async": "^1.2.0",
     "react-monaco-editor": "^0.50.1",
-    "umi": "^3.5.0"
+    "remark-directive": "^2.0.1",
+    "umi": "^3.5.0",
+    "unist-util-visit": "^4.1.1"
   },
   "devDependencies": {
     "@ant-design/pro-cli": "^2.1.0",
