--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -63,12 +63,15 @@
     "@bytemd/plugin-medium-zoom": "^1.17.2",
     "@bytemd/plugin-mermaid": "^1.17.2",
     "@bytemd/react": "^1.17.2",
+    "@emoji-mart/data": "^1.0.5",
+    "@emoji-mart/react": "^1.0.1",
     "@umijs/route-utils": "^2.0.0",
     "antd": "^4.19.0",
     "antd-img-crop": "^4.2.4",
     "btoa": "^1.2.1",
     "classnames": "^2.3.0",
     "copy-to-clipboard": "^3.3.2",
+    "emoji-mart": "^5.2.1",
     "front-matter": "^4.0.2",
     "github-markdown-css": "^5.1.0",
     "js-sha256": "^0.9.0",
