--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       # 如果你改了这两个，那上面的数据库连接地址也要同步修改。
       MONGO_INITDB_ROOT_USERNAME: vanBlog
       MONGO_INITDB_ROOT_PASSWORD: vanBlog
+      MONGO_INITDB_DATABASE: vanBlog
     volumes:
       - ${PWD}/data/mongo:/data/db
     # 如果你向在外部访问数据库，并且已经设置了强密码，那可以取消下面的注释
