--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -54,6 +54,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sitemap": "^7.1.1",
     "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
