--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -8,14 +8,8 @@ services:
       TZ: "Asia/Shanghai"
       # 图片资源允许的域名，英文逗号分隔。作者 logo 加载不出来请检查此项。不要带协议！
       VAN_BLOG_ALLOW_DOMAINS: "www.mereith.com"
-      # CDN URL，包含协议，部署到 cdn 的时候用。在开启 cdn 之前请不要设置此项。
-      # VAN_BLOG_CDN_URL: "https://www.mereith.com"
-      # mongodb 的地址
-      VAN_BLOG_DATABASE_URL: "mongodb://vanBlog:vanBlog@mongo:27017"
       # 邮箱地址，用于自动申请 https 证书
       EMAIL: "someone@mereith.com"
-      # 内嵌评论系统的 db 名，默认为 waline
-      VAN_BLOG_WALINE_DB: "waline"
     volumes:
       # 图床文件的存放地址，按需修改。
       - ${PWD}/data/static:/app/static
@@ -26,6 +20,7 @@ services:
       # caddy 证书存储
       - ${PWD}/caddy/data:/root/.local/share/caddy
     ports:
+      # 前面的是映射到宿主机的端口号，改端口的话该前面的
       - 80:80
       - 443:443
   mongo:
@@ -34,12 +29,6 @@ services:
     restart: always
     environment:
       TZ: "Asia/Shanghai"
-      # 如果你改了这两个，那上面的数据库连接地址也要同步修改。
-      MONGO_INITDB_ROOT_USERNAME: vanBlog
-      MONGO_INITDB_ROOT_PASSWORD: vanBlog
-      MONGO_INITDB_DATABASE: vanBlog
     volumes:
       - ${PWD}/data/mongo:/data/db
-    # 如果你向在外部访问数据库，并且已经设置了强密码，那可以取消下面的注释
-    # ports:
-      # - 27017:27017
+
