--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vuepress-theme-hope": "^2.0.0-beta.87"
   },
   "scripts": {
+    "dev": "node scripts/dev.js",
     "sync-aliyun": "bash scripts/sync-aliyuncs.sh",
     "build:test": "act -j test --secret-file=.env",
     "webhook": "node scripts/webhook.js",
