feat: 更新内置 picgo-core 到 1.5.0

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -49,7 +49,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "picgo": "^1.5.0-alpha.0",
+    "picgo": "^1.5.0",
     "pino": "^8.4.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
