feat: 客制化可自定义 head 下标签，会跟随前台进行静态页面生成，可用于验证网站所有权

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,6 +32,7 @@
     "@types/line-reader": "^0.0.34",
     "@types/request-ip": "^0.0.37",
     "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.12",
     "compressing": "^1.6.2",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.4",
