--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -16,7 +16,7 @@
     "headroom.js": "^0.12.0",
     "js-base64": "^3.7.4",
     "mermaid": "^9.1.6",
-    "next": "latest",
+    "next": "12.2.5",
     "react": "18.1.0",
     "react-burger-menu": "^3.0.8",
     "react-copy-to-clipboard": "^5.1.0",
