--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -13,14 +13,15 @@
     "@types/mermaid": "^8.2.9",
     "@waline/client": "^2.14.7",
     "dayjs": "^1.11.3",
+    "eslint-config-next": "^13.2.1",
     "headroom.js": "^0.12.0",
     "js-base64": "^3.7.4",
     "mermaid": "^9.1.6",
-    "next": "12.2.5",
-    "react": "18.1.0",
+    "next": "^13.2.1",
+    "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "18.1.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
     "react-markdown": "^8.0.3",
     "react-photo-view": "^1.2.2",
