--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "dev": "node scripts/dev.js",
+    "kill": "bash scripts/kill-all.sh",
     "sync-aliyun": "bash scripts/sync-aliyuncs.sh",
     "build:test": "act -j test --secret-file=.env",
     "webhook": "node scripts/webhook.js",
