--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.46.0",
   "private": true,
   "devDependencies": {
-    "@vuepress/client": "^2.0.0-beta.49",
-    "@vuepress/plugin-search": "^2.0.0-beta.49",
+    "@vuepress/client": "2.0.0-beta.60",
+    "@vuepress/plugin-search": "2.0.0-beta.60",
     "lerna": "^4.0.0",
     "standard-version": "^9.5.0",
-    "vue": "^3.2.36",
-    "vuepress": "^2.0.0-beta.49",
-    "vuepress-theme-hope": "^2.0.0-beta.87"
+    "vue": "^3.2.47",
+    "vuepress": "2.0.0-beta.60",
+    "vuepress-theme-hope": "2.0.0-beta.182"
   },
   "scripts": {
     "dev": "node scripts/dev.js",
