--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.60",
-    "@vuepress/plugin-search": "2.0.0-beta.60",
     "lerna": "^4.0.0",
     "standard-version": "^9.5.0",
     "vue": "^3.2.47",
     "vuepress": "2.0.0-beta.60",
+    "vuepress-plugin-search-pro": "2.0.0-beta.182",
     "vuepress-theme-hope": "2.0.0-beta.182"
   },
   "scripts": {
