--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -41,6 +41,7 @@
     "feed": "^4.2.2",
     "highlight.js": "^11.6.0",
     "image-size": "^1.0.2",
+    "jimp": "^0.22.7",
     "js-base64": "^3.7.2",
     "js-sha256": "^0.9.0",
     "line-reader": "^0.4.0",
