--- a/package.json
+++ b/package.json
@@ -2,21 +2,13 @@
   "name": "root",
   "version": "0.48.0",
   "private": true,
-  "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.61",
-    "lerna": "^4.0.0",
-    "standard-version": "^9.5.0",
-    "vue": "^3.2.47",
-    "vuepress": "2.0.0-beta.61",
-    "vuepress-plugin-search-pro": "2.0.0-beta.184",
-    "vuepress-theme-hope": "2.0.0-beta.184"
-  },
   "scripts": {
-    "dev": "node scripts/dev.js",
-    "kill": "bash scripts/kill-all.sh",
-    "sync-aliyun": "bash scripts/sync-aliyuncs.sh",
     "build:test": "act -j test --secret-file=.env",
-    "webhook": "node scripts/webhook.js",
+    "dev": "node scripts/dev.js",
+    "docs:build": "vuepress build docs",
+    "docs:clean-dev": "vuepress dev docs --clean-cache",
+    "docs:dev": "vuepress dev docs",
+    "kill": "bash scripts/kill-all.sh",
     "release:local": "act -j local-build --secret-file=.env",
     "release": "standard-version",
     "release-note": "node scripts/releaseNote.js",
@@ -24,9 +16,17 @@
     "release-major": "standard-version --release-as major",
     "release-minor": "standard-version --release-as minor",
     "release-patch": "standard-version --release-as patch",
-    "docs:build": "vuepress build docs",
-    "docs:clean-dev": "vuepress dev docs --clean-cache",
-    "docs:dev": "vuepress dev docs"
+    "sync-aliyun": "bash scripts/sync-aliyuncs.sh",
+    "webhook": "node scripts/webhook.js"
   },
-  "dependencies": {}
+  "devDependencies": {
+    "@vuepress/client": "2.0.0-beta.61",
+    "@vuepress/utils": "2.0.0-beta.61",
+    "lerna": "^4.0.0",
+    "standard-version": "^9.5.0",
+    "vue": "^3.2.47",
+    "vuepress": "2.0.0-beta.61",
+    "vuepress-plugin-search-pro": "2.0.0-beta.184",
+    "vuepress-theme-hope": "2.0.0-beta.184"
+  }
 }
