--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "standard-version": "^9.5.0",
     "vue": "^3.2.47",
     "vuepress": "2.0.0-beta.61",
+    "vuepress-plugin-redirect": "2.0.0-beta.184",
     "vuepress-plugin-search-pro": "2.0.0-beta.184",
     "vuepress-theme-hope": "2.0.0-beta.184"
   }
