--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,10 +1,11 @@
 {
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development next dev -p 3001 --hostname 0.0.0.0",
+    "anlysis": "cross-env ANALYZE=true next build",
     "build": "next build",
-    "start": "next start",
-    "anlysis": "cross-env ANALYZE=true next build"
+    "dev": "cross-env NODE_ENV=development next dev -p 3001 --hostname 0.0.0.0",
+    "test": "vitest",
+    "start": "next start"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^12.2.5",
@@ -51,6 +52,7 @@
     "cross-env": "^7.0.3",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2",
-    "typescript": "4.7.2"
+    "typescript": "4.7.2",
+    "vitest": "0.29.2"
   }
 }
