chore: use pnpm #199

--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "root",
+  "name": "vanblog",
   "version": "0.48.0",
   "private": true,
   "scripts": {
+    "clean": "rm -rf node_modules packages/*/node_modules",
     "build:test": "act -j test --secret-file=.env",
-    "dev": "node scripts/dev.js",
+    "dev": "lerna run dev --parallel --scope=@vanblog/server --scope=@vanblog/admin",
+    "dev:website": "lerna run dev --scope=@vanblog/theme-default",
+    "dev:admin": "lerna run dev --scope=@vanblog/admin",
+    "dev:server": "lerna run dev --scope=@vanblog/server",
+    "dev:server:noweb": "lerna run dev:noweb --scope=@vanblog/server",
     "docs:build": "vuepress build docs",
     "docs:clean-dev": "vuepress dev docs --clean-cache",
     "docs:dev": "vuepress dev docs",
@@ -22,7 +27,7 @@
   "devDependencies": {
     "@vuepress/client": "2.0.0-beta.61",
     "@vuepress/utils": "2.0.0-beta.61",
-    "lerna": "^4.0.0",
+    "lerna": "^6.5.1",
     "standard-version": "^9.5.0",
     "vue": "^3.2.47",
     "vuepress": "2.0.0-beta.61",
