--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "server",
+  "name": "@vanblog/server",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "GPL-3.0",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "dev": "nest start --watch",
+    "dev:noweb": "VANBLOG_DISABLE_WEBSITE=true nest start --watch",
     "start": "nest start",
     "start:noweb": "VANBLOG_DISABLE_WEBSITE=true nest start",
     "start:dev": "nest start --watch",
@@ -59,7 +61,8 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "sitemap": "^7.1.1",
-    "swagger-ui-express": "^4.4.0"
+    "swagger-ui-express": "^4.4.0",
+    "yaml": "^2.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
