--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ant-design-pro",
+  "name": "@vanblog/admin",
   "version": "5.2.0",
   "private": true,
   "description": "An out-of-box UI solution for enterprise applications",
@@ -7,7 +7,7 @@
     "analyze": "cross-env ANALYZE=1 umi build",
     "build": " umi build",
     "deploy": "npm run build && npm run gh-pages",
-    "dev": "npm run start:dev",
+    "dev": "cross-env REACT_APP_ENV=dev NODE_OPTIONS=--openssl-legacy-provider MOCK=none UMI_ENV=dev umi dev",
     "gh-pages": "gh-pages -d dist",
     "i18n-remove": "pro i18n-remove --locale=zh-CN --write",
     "postinstall": "umi g tmp",
@@ -27,7 +27,6 @@
     "start:dev": "cross-env REACT_APP_ENV=dev MOCK=none UMI_ENV=dev umi dev",
     "start:no-mock": "cross-env MOCK=none UMI_ENV=dev umi dev",
     "start:no-ui": "cross-env UMI_UI=none UMI_ENV=dev umi dev",
-    "start:node17": "cross-env  NODE_OPTIONS=--openssl-legacy-provider  MOCK=none UMI_ENV=dev PORT=3002 umi dev",
     "start:pre": "cross-env REACT_APP_ENV=pre UMI_ENV=dev umi dev",
     "start:test": "cross-env REACT_APP_ENV=test MOCK=none UMI_ENV=dev umi dev",
     "test": "umi test",
@@ -70,11 +69,14 @@
     "antd": "^4.19.0",
     "antd-img-crop": "^4.2.4",
     "btoa": "^1.2.1",
+    "bytemd": "^1.20.2",
     "classnames": "^2.3.0",
     "copy-to-clipboard": "^3.3.2",
     "emoji-mart": "^5.2.1",
     "front-matter": "^4.0.2",
+    "highlight.js": "^11.6.0",
     "js-sha256": "^0.9.0",
+    "katex": "^0.16.4",
     "lodash": "^4.17.0",
     "moment": "^2.29.0",
     "monaco-editor": "^0.34.0",
@@ -84,11 +86,11 @@
     "rc-menu": "^9.1.0",
     "rc-resize-observer": "^1.2.0",
     "rc-util": "^5.16.0",
-    "react": "^17.0.0",
+    "react": "^17.0.2",
     "react-contexify": "^5.0.0",
     "react-dev-inspector": "^1.7.0",
-    "react-dom": "^17.0.0",
-    "react-helmet-async": "^1.2.0",
+    "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.3.0",
     "react-monaco-editor": "^0.50.1",
     "remark-directive": "^2.0.1",
     "umi": "^3.5.0",
