--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,5 +1,7 @@
 {
+  "name": "@vanblog/theme-default",
   "private": true,
+  "license": "GPL-3.0",
   "scripts": {
     "anlysis": "cross-env ANALYZE=true next build",
     "build": "next build",
@@ -17,17 +19,17 @@
     "eslint-config-next": "^13.2.1",
     "headroom.js": "^0.12.0",
     "js-base64": "^3.7.4",
-    "mermaid": "^9.1.6",
+    "mermaid": "^10.0.2",
     "next": "^13.2.1",
     "react": "^18.2.0",
-    "react-burger-menu": "^3.0.8",
+    "react-burger-menu": "^3.0.9",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.3.0",
-    "react-markdown": "^8.0.3",
-    "react-photo-view": "^1.2.2",
+    "react-hot-toast": "^2.4.0",
+    "react-markdown": "^8.0.5",
+    "react-photo-view": "^1.2.3",
     "react-syntax-highlighter": "^15.5.0",
-    "react-tiny-popover": "^7.1.0",
+    "react-tiny-popover": "^7.2.4",
     "react-use": "^17.4.0",
     "rehype-katex": "^6.0.2",
     "rehype-raw": "^6.1.1",
@@ -39,6 +41,8 @@
     "sharp": "^0.30.7"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.38",
+    "@swc/jest": "^0.2.24",
     "@types/headroom.js": "^0.12.2",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
