--- a/packages/@vanblog/admin/package.json
+++ b/packages/@vanblog/admin/package.json
@@ -12,8 +12,6 @@
     "i18n-remove": "pro i18n-remove --locale=zh-CN --write",
     "postinstall": "umi g tmp",
     "lint": "umi g tmp && npm run lint:js && npm run lint:style && npm run lint:prettier && npm run tsc",
-    "lint-staged": "lint-staged",
-    "lint-staged:js": "eslint --ext .js,.jsx,.ts,.tsx ",
     "lint:fix": "eslint --fix --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src && npm run lint:style",
     "lint:js": "eslint --cache --ext .js,.jsx,.ts,.tsx --format=pretty ./src",
     "lint:prettier": "prettier -c --write \"src/**/*\" --end-of-line auto",
@@ -36,7 +34,7 @@
   },
   "lint-staged": {
     "**/*.less": "stylelint --syntax less",
-    "**/*.{js,jsx,ts,tsx}": "npm run lint-staged:js",
+    "**/*.{js,jsx,ts,tsx}": "eslint --ext .js,.jsx,.ts,.tsx",
     "**/*.{js,jsx,tsx,ts,less,md,json}": [
       "prettier --write"
     ]
@@ -117,12 +115,10 @@
     "cross-env": "^7.0.0",
     "cross-port-killer": "^1.3.0",
     "detect-installer": "^1.0.0",
-    "eslint": "^7.32.0",
     "gh-pages": "^3.2.0",
     "jsdom-global": "^3.0.0",
     "lint-staged": "^10.0.0",
     "mockjs": "^1.1.0",
-    "prettier": "^2.5.0",
     "stylelint": "^13.0.0",
     "swagger-ui-react": "^3.52.0",
     "typescript": "^4.5.0",
