chore: update deps

--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   },
   "packageManager": "pnpm@7.29.1",
   "devDependencies": {
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "lerna": "^6.5.1",
-    "prettier": "^2.3.2",
-    "rimraf": "^3.0.2",
-    "standard-version": "^9.5.0"
+    "cross-env": "7.0.3",
+    "eslint": "8.35.0",
+    "eslint-config-prettier": "8.7.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "lerna": "6.5.1",
+    "lint-staged": "13.1.2",
+    "prettier": "2.8.4",
+    "rimraf": "4.3.1",
+    "stylelint": "15.2.0",
+    "standard-version": "9.5.0"
   }
 }
