--- a/packages/admin/jsconfig.json
+++ b/packages/admin/jsconfig.json
@@ -5,7 +5,10 @@
     "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": [
+        "./src/*"
+      ]
+    },
+    "composite": true
   }
 }
