--- a/packages/theme-default/package.json
+++ b/packages/theme-default/package.json
@@ -34,9 +34,9 @@
     "rehype-raw": "^6.1.1",
     "remark-breaks": "^3.0.2",
     "remark-directive": "^2.0.1",
-    "remark-directive-rehype": "^0.4.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "remark-rehype": "^10.1.0",
     "sharp": "^0.30.7"
   },
   "devDependencies": {
