--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,14 @@
 {
-  "compilerOptions": {
-    "module": "CommonJS",
-    "esModuleInterop": true,
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "es2017",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true,
-    "skipLibCheck": true,
-    "strictNullChecks": false,
-    "noImplicitAny": false,
-    "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": false,
-    "composite": true
-  }
+  "extends": "./tsconfig.base.json",
+  "references": [
+    {
+      "path": "./packages/admin"
+    },
+    {
+      "path": "./packages/theme-default"
+    },
+    {
+      "path": "./packages/server"
+    }
+  ],
 }
