--- a/packages/admin/jsconfig.json
+++ b/packages/admin/jsconfig.json
@@ -4,6 +4,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "baseUrl": ".",
+    "composite": true,
     "paths": {
       "@/*": ["./src/*"]
     }
