--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ant-design-pro",
+  "name": "@vanblog/admin",
   "version": "5.2.0",
   "private": true,
   "description": "An out-of-box UI solution for enterprise applications",
   "scripts": {
     "analyze": "cross-env ANALYZE=1 umi build",
-    "build": " umi build",
+    "build": "cross-env NODE_OPTIONS=--openssl-legacy-provider umi build",
     "deploy": "npm run build && npm run gh-pages",
-    "dev": "npm run start:dev",
+    "dev": "cross-env NODE_OPTIONS=--openssl-legacy-provider npm run start:dev",
     "gh-pages": "gh-pages -d dist",
     "i18n-remove": "pro i18n-remove --locale=zh-CN --write",
     "postinstall": "umi g tmp",
@@ -70,11 +70,14 @@
     "antd": "^4.19.0",
     "antd-img-crop": "^4.2.4",
     "btoa": "^1.2.1",
+    "bytemd": "^1.20.2",
     "classnames": "^2.3.0",
     "copy-to-clipboard": "^3.3.2",
     "emoji-mart": "^5.2.1",
     "front-matter": "^4.0.2",
+    "highlight.js": "^11.6.0",
     "js-sha256": "^0.9.0",
+    "katex": "^0.16.4",
     "lodash": "^4.17.0",
     "moment": "^2.29.0",
     "monaco-editor": "^0.34.0",
