--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "0.0.0"
+  "$schema": "node_modules/lerna/schemas/lerna-schema.json",
+  "useWorkspaces": true,
+  "version": "0.0.0",
+  "npmClient": "pnpm"
 }
