--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,5 +1,6 @@
 {
   "private": true,
+  "name": "@vanblog/theme-default",
   "scripts": {
     "anlysis": "cross-env ANALYZE=true next build",
     "build": "next build",
@@ -8,37 +9,39 @@
     "start": "next start"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^12.2.5",
-    "@types/lodash": "^4.14.184",
+    "@next/bundle-analyzer": "^12.3.4",
+    "@types/lodash": "^4.14.191",
     "@types/markdown-navbar": "^1.4.0",
-    "@types/mermaid": "^8.2.9",
-    "@waline/client": "^2.14.7",
-    "dayjs": "^1.11.3",
-    "eslint-config-next": "^13.2.1",
+    "@waline/client": "^2.14.8",
+    "dayjs": "^1.11.7",
+    "eslint-config-next": "^13.2.3",
     "headroom.js": "^0.12.0",
-    "js-base64": "^3.7.4",
-    "mermaid": "^9.1.6",
-    "next": "^13.2.1",
+    "js-base64": "^3.7.5",
+    "mermaid": "^10.0.2",
+    "next": "^13.2.3",
     "react": "^18.2.0",
-    "react-burger-menu": "^3.0.8",
+    "react-burger-menu": "^3.0.9",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.3.0",
-    "react-markdown": "^8.0.3",
-    "react-photo-view": "^1.2.2",
+    "react-hot-toast": "^2.4.0",
+    "react-markdown": "^8.0.5",
+    "react-photo-view": "^1.2.3",
     "react-syntax-highlighter": "^15.5.0",
-    "react-tiny-popover": "^7.1.0",
+    "react-tiny-popover": "^7.2.4",
     "react-use": "^17.4.0",
     "rehype-katex": "^6.0.2",
     "rehype-raw": "^6.1.1",
     "remark-breaks": "^3.0.2",
     "remark-directive": "^2.0.1",
-    "remark-directive-rehype": "^0.4.0",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "remark-rehype": "^10.1.0",
     "sharp": "^0.30.7"
   },
   "devDependencies": {
+    "@swc/core": "^1.3.38",
+    "@swc/jest": "^0.2.24",
+    "@types/hast": "^2.3.4",
     "@types/headroom.js": "^0.12.2",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
