--- a/package.json
+++ b/package.json
@@ -33,11 +33,29 @@
     "standard-version": "^9.5.0",
     "vue": "^3.2.47",
     "vuepress": "2.0.0-beta.61",
+    "vuepress-plugin-auto-catalog": "2.0.0-beta.191",
+    "vuepress-plugin-blog2": "2.0.0-beta.191",
+    "vuepress-plugin-comment2": "2.0.0-beta.191",
+    "vuepress-plugin-components": "2.0.0-beta.191",
+    "vuepress-plugin-copy-code2": "2.0.0-beta.191",
+    "vuepress-plugin-copyright2": "2.0.0-beta.191",
+    "vuepress-plugin-feed2": "2.0.0-beta.191",
+    "vuepress-plugin-md-enhance": "2.0.0-beta.191",
+    "vuepress-plugin-photo-swipe": "2.0.0-beta.191",
+    "vuepress-plugin-pwa2": "2.0.0-beta.191",
+    "vuepress-plugin-reading-time2": "2.0.0-beta.191",
     "vuepress-plugin-redirect": "2.0.0-beta.185",
+    "vuepress-plugin-rtl": "2.0.0-beta.191",
     "vuepress-plugin-search-pro": "2.0.0-beta.185",
+    "vuepress-plugin-seo2": "2.0.0-beta.191",
+    "vuepress-plugin-sitemap2": "2.0.0-beta.191",
     "vuepress-theme-hope": "2.0.0-beta.185"
   },
   "dependencies": {
-    "cross-env": "^7.0.3"
+    "@vuepress/core": "^1.9.9",
+    "@vuepress/shared-utils": "^1.9.9",
+    "cross-env": "^7.0.3",
+    "vuepress-plugin-sass-palette": "2.0.0-beta.191",
+    "vuepress-shared": "2.0.0-beta.191"
   }
 }
