--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -40,6 +40,7 @@
     "compressing": "^1.6.2",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.4",
+    "express": "^4.18.2",
     "feed": "^4.2.2",
     "highlight.js": "^11.6.0",
     "image-size": "^1.0.2",
