chore(docs): update workflow

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -40,7 +40,7 @@ jobs:
           cache: yarn
 
       - name: 安装依赖
-        run: yarn install --frozen-lockfile
+        run: yarn install
 
       - name: 构建文档
         env:
