--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -25,71 +25,71 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
+    "@nestjs/common": "^8.4.7",
+    "@nestjs/core": "^8.4.7",
     "@nestjs/jwt": "^8.0.1",
-    "@nestjs/mongoose": "^9.0.3",
+    "@nestjs/mongoose": "^9.2.1",
     "@nestjs/passport": "^8.2.2",
-    "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/schedule": "^2.1.0",
+    "@nestjs/platform-express": "^8.4.7",
+    "@nestjs/schedule": "^2.2.0",
     "@nestjs/swagger": "^5.2.1",
     "@types/line-reader": "^0.0.34",
     "@types/request-ip": "^0.0.37",
     "axios": "^0.27.2",
-    "cheerio": "^1.0.0-rc.12",
-    "compressing": "^1.6.2",
+    "cheerio": "1.0.0-rc.12",
+    "compressing": "^1.8.0",
     "crypto": "^1.0.1",
-    "dayjs": "^1.11.4",
+    "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "feed": "^4.2.2",
-    "highlight.js": "^11.6.0",
+    "highlight.js": "^11.7.0",
     "image-size": "^1.0.2",
     "jimp": "^0.22.7",
-    "js-base64": "^3.7.2",
+    "js-base64": "^3.7.5",
     "js-sha256": "^0.9.0",
     "line-reader": "^0.4.0",
     "lodash": "^4.17.21",
     "markdown-it": "^13.0.1",
     "markdown-it-katex": "^2.0.3",
     "markdown-it-task-lists": "^2.1.1",
-    "mongoose": "^6.3.4",
+    "mongoose": "^6.10.2",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "picgo": "^1.5.0",
-    "pino": "^8.4.2",
+    "pino": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
+    "rxjs": "^7.8.0",
     "sitemap": "^7.1.1",
-    "swagger-ui-express": "^4.4.0",
+    "swagger-ui-express": "^4.6.2",
     "yaml": "^2.2.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/express": "^4.17.13",
+    "@nestjs/cli": "^8.2.8",
+    "@nestjs/schematics": "^8.0.11",
+    "@nestjs/testing": "^8.4.7",
+    "@types/express": "^4.17.17",
     "@types/jest": "27.5.0",
     "@types/multer": "^1.4.7",
-    "@types/node": "^16.0.0",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "@types/node": "^16.18.14",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/passport-local": "^1.0.35",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "28.0.3",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
+    "prettier": "^2.8.4",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
     "ts-jest": "28.0.1",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.9.5"
   },
   "jest": {
     "moduleFileExtensions": [
