--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -14,11 +14,11 @@
     "@types/markdown-navbar": "^1.4.0",
     "@waline/client": "^2.14.8",
     "dayjs": "^1.11.7",
-    "eslint-config-next": "^13.2.3",
+    "eslint-config-next": "^13.2.4",
     "headroom.js": "^0.12.0",
     "js-base64": "^3.7.5",
     "mermaid": "^10.0.2",
-    "next": "^13.2.3",
+    "next": "^13.2.4",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-copy-to-clipboard": "^5.1.0",
@@ -39,23 +39,23 @@
     "sharp": "^0.30.7"
   },
   "devDependencies": {
-    "@swc/core": "^1.3.38",
+    "@swc/core": "^1.3.39",
     "@swc/jest": "^0.2.24",
     "@types/hast": "^2.3.4",
     "@types/headroom.js": "^0.12.2",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-burger-menu": "^2.8.3",
-    "@types/react-copy-to-clipboard": "^5.0.3",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "18.0.5",
     "@types/react-headroom": "^2.2.2",
-    "@types/react-scroll": "^1.8.3",
-    "@types/react-syntax-highlighter": "^15.5.3",
-    "autoprefixer": "^10.4.7",
+    "@types/react-scroll": "^1.8.6",
+    "@types/react-syntax-highlighter": "^15.5.6",
+    "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
-    "postcss": "^8.4.14",
-    "tailwindcss": "^3.1.2",
-    "typescript": "4.7.2",
-    "vitest": "0.29.2"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^4.9.5",
+    "vitest": "^0.29.2"
   }
 }
