--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -33,6 +33,7 @@
     "rehype-raw": "^6.1.1",
     "remark-breaks": "^3.0.2",
     "remark-directive": "^2.0.1",
+    "remark-directive-rehype": "^0.4.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "remark-rehype": "^10.1.0",
