feat: 流水线功能,可在特定事件发生后执行自定义的任意js代码

--- a/packages/admin/tsconfig.json
+++ b/packages/admin/tsconfig.json
@@ -6,7 +6,9 @@
     "baseUrl": ".",
     "composite": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   }
 }
