--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -11,7 +11,6 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "rootDir": "./src",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
@@ -22,7 +21,7 @@
     "composite": true,
     "paths": {
       "mongoose": [
-        "node_modules/mongoose"
+        "./node_modules/mongoose"
       ],
     }
   }
