--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,10 +9,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@bytemd/plugin-gfm": "^1.17.2",
+    "@bytemd/plugin-highlight-ssr": "^1.20.2",
+    "@bytemd/plugin-math-ssr": "^1.20.2",
+    "@bytemd/plugin-medium-zoom": "^1.17.2",
+    "@bytemd/plugin-mermaid": "^1.17.2",
+    "@bytemd/react": "^1.17.2",
     "@next/bundle-analyzer": "^13.2.4",
     "@types/lodash": "^4.14.191",
     "@types/markdown-navbar": "^1.4.0",
     "@waline/client": "^2.14.8",
+    "bytemd": "^1.20.2",
+    "copy-to-clipboard": "^3.3.2",
     "dayjs": "^1.11.7",
     "eslint-config-next": "^13.2.4",
     "headroom.js": "^0.12.0",
@@ -26,20 +34,16 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
-    "react-markdown": "^8.0.5",
     "react-photo-view": "^1.2.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-tiny-popover": "^7.2.4",
     "react-use": "^17.4.0",
-    "rehype-katex": "^6.0.2",
     "rehype-raw": "^6.1.1",
-    "remark-breaks": "^3.0.2",
     "remark-directive": "^2.0.1",
-    "remark-directive-rehype": "^0.4.2",
     "remark-gfm": "^3.0.1",
-    "remark-math": "^5.1.1",
     "remark-rehype": "^10.1.0",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "unist-util-visit": "^4.1.1"
   },
   "devDependencies": {
     "@swc/core": "^1.3.40",
