fix: 搜索 API 报错 #174

--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -11,7 +11,7 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "rootDir": "./src",
+    // "rootDir": "./src",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
