chore(docs): 部署成功后自动刷新 CDN

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -62,6 +62,8 @@ jobs:
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.K8S_CONFIG_DATA }}
           command: set image  deployment/vanblog-doc vanblog-doc=docker.io/mereith/van-blog-website:${{ steps.get_version.outputs.VERSION }}
-      # - name: send Message To me
-      #   run: |
-      #     curl -X POST -H "Content-Type: application/json" -d '{"source":"github-ci:van-blog-doc","message":"流水线运行完毕，${{ steps.get_version.outputs.VERSION }} 已部署"}'  ${{ secrets.WEBHOOK_URL }}
+      - name: 等待部署生效
+        run: sleep 300
+      - name: 刷新 CDN 缓存
+        run: |-
+          curl -X POST -H "Content-Type: application/json" --header 'token: ${{ secrets.CDN_REFLASH_SECRET }}'  -d '{"url":"https://vanblog.mereith.com/"}'  ${{ secrets.CDN_REFLASH_URL }}
