fix: 图片放大失效、作者头像取消旋转效果、图片加载失败时增加一个原有src属性的展示属性

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -12,7 +12,6 @@
     "@bytemd/plugin-gfm": "^1.17.2",
     "@bytemd/plugin-highlight-ssr": "^1.20.2",
     "@bytemd/plugin-math-ssr": "^1.20.2",
-    "@bytemd/plugin-medium-zoom": "^1.17.2",
     "@bytemd/plugin-mermaid": "^1.17.2",
     "@bytemd/react": "^1.17.2",
     "@next/bundle-analyzer": "^13.2.4",
@@ -27,6 +26,7 @@
     "js-base64": "^3.7.5",
     "katex": "^0.16.4",
     "lodash": "^4.17.21",
+    "medium-zoom": "^1.0.8",
     "mermaid": "^10.0.2",
     "next": "^13.2.4",
     "react": "^18.2.0",
