chore: arm build error

--- a/.github/workflows/arm.yml
+++ b/.github/workflows/arm.yml
@@ -1,14 +1,14 @@
-name: test-arm
+name: arm
 
 on:
   push:
     tags:
-      - "test-arm*"
+      - "arm*"
 permissions:
   contents: write
 
 jobs:
-  test:
+  arm:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
