--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "build:server": "pnpm --filter @vanblog/server build",
     "build:website": "pnpm --filter @vanblog/theme-default build",
     "dev": "pnpm --filter @vanblog/server --filter @vanblog/admin -r --parallel dev",
-    "dev:server": "lerna run dev:noweb --scope @vanblog/server",
-    "dev:website": "lerna run dev --scope @vanblog/theme-default",
-    "dev:admin": "lerna run dev --scope @vanblog/admin",
+    "dev:admin": "pnpm --filter @vanblog/admin dev",
+    "dev:server": "pnpm --filter @vanblog/server dev:noweb",
+    "dev:website": "pnpm --filter @vanblog/theme-default dev",
     "docs:build": "vuepress build ./docs",
     "docs:clean-dev": "vuepress dev ./docs --clean-cache",
     "docs:dev": "vuepress dev ./docs",
