chore: 一键脚本增加中国ip检测，分流国内外下载地址

--- a/docker-compose/docker-compose-template.yml
+++ b/docker-compose/docker-compose-template.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   vanblog:
-    image: mereith/van-blog:vanblog_version
+    image: vanblog_image
     restart: always
     environment:
       TZ: "Asia/Shanghai"
