--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,23 +13,29 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Configure committer
         run: |
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
+
       - name: Get version
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+
       - name: 展示版本
         run: echo ${{ steps.get_version.outputs.VERSION }}
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
+
       # - name: Login to AliyunCS
       #   uses: docker/login-action@v1
       #   with:
@@ -38,11 +44,13 @@ jobs:
       #     password: ${{ secrets.ALI_PASSWORD  }}
       # "registry.cn-beijing.aliyuncs.com/mereith/van-blog:latest"
       # "registry.cn-beijing.aliyuncs.com/mereith/van-blog:${{ steps.get_version.outputs.VERSION }}"
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: 打包镜像并推送
         uses: docker/build-push-action@v2
         with:
@@ -56,25 +64,37 @@ jobs:
           tags: |
             "docker.io/mereith/van-blog:${{ steps.get_version.outputs.VERSION }}"
             "docker.io/mereith/van-blog:latest"
-      - name: 设置 Node.js
-        uses: actions/setup-node@v3
+
+      - name: 安装 pnpm
+        uses: pnpm/action-setup@v2
         with:
-          node-version: 16
-      - run: npm install --global pnpm
+          run_install: true
+
+      - name: 设置 Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: pnpm
+
+      
       - name: generateReleaseNote
-        run: pnpm run release-note
+        run: pnpm release-note
+
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
           body_path: CHANGE.md
+
       - name: updateVersionToApiServer
         run: |
           curl -X POST "${{ secrets.VERSIONURL }}${{ steps.get_version.outputs.VERSION }}"
+
       - name: 部署到集群
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.K8S_CONFIG_DATA }}
           command: set image  deployment/van-blog van-blog=docker.io/mereith/van-blog:${{ steps.get_version.outputs.VERSION }}
+
       - name: 部署 demo 到集群
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
