--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "private": true,
   "scripts": {
     "clean": "rm -rf node_modules && rm -rf packages/*/node_modules && rm -rf packages/*/dist",
+    "build": "pnpm --filter @vanblog/server --filter @vanblog/theme-default --filter @vanblog/admin --parallel build",
+    "build:admin": "pnpm --filter @vanblog/admin build",
+    "build:server": "pnpm --filter @vanblog/server build",
     "build:test": "act -j test --secret-file=.env",
-    "build": "lerna run build --scope=@vanblog/server --scope=@vanblog/theme-default --scope=@vanblog/admin --parallel",
-    "build:server": "lerna run build --scope=@vanblog/server",
-    "build:website": "lerna run build --scope=@vanblog/theme-default",
-    "build:admin": "lerna run build --scope=@vanblog/admin",
-    "dev": "lerna run dev --scope @vanblog/server --scope @vanblog/admin --parallel",
-    "dev:server": "lerna run dev:noweb --scope @vanblog/server",
-    "dev:website": "lerna run dev --scope @vanblog/theme-default",
-    "dev:admin": "lerna run dev --scope @vanblog/admin",
+    "build:website": "pnpm --filter @vanblog/theme-default build",
+    "dev": "pnpm --filter @vanblog/server --filter @vanblog/admin --parallel dev",
+    "dev:server": "pnpm --filter @vanblog/server dev:noweb ",
+    "dev:website": "pnpm --filter @vanblog/theme-default dev",
+    "dev:admin": "pnpm --filter @vanblog/admin dev",
     "docs:build": "vuepress build ./docs",
     "docs:clean-dev": "vuepress dev ./docs --clean-cache",
     "docs:dev": "vuepress dev ./docs",
@@ -28,37 +28,20 @@
     "sync-aliyun": "bash scripts/sync-aliyuncs.sh",
     "webhook": "node scripts/webhook.js"
   },
-  "devDependencies": {
-    "@vuepress/client": "2.0.0-beta.61",
-    "@vuepress/utils": "2.0.0-beta.61",
-    "lerna": "^6.5.1",
-    "nan": "^2.17.0",
-    "standard-version": "^9.5.0",
-    "vue": "^3.2.47",
-    "vuepress": "2.0.0-beta.61",
-    "vuepress-plugin-auto-catalog": "2.0.0-beta.191",
-    "vuepress-plugin-blog2": "2.0.0-beta.191",
-    "vuepress-plugin-comment2": "2.0.0-beta.191",
-    "vuepress-plugin-components": "2.0.0-beta.191",
-    "vuepress-plugin-copy-code2": "2.0.0-beta.191",
-    "vuepress-plugin-copyright2": "2.0.0-beta.191",
-    "vuepress-plugin-feed2": "2.0.0-beta.191",
-    "vuepress-plugin-md-enhance": "2.0.0-beta.191",
-    "vuepress-plugin-photo-swipe": "2.0.0-beta.191",
-    "vuepress-plugin-pwa2": "2.0.0-beta.191",
-    "vuepress-plugin-reading-time2": "2.0.0-beta.191",
-    "vuepress-plugin-redirect": "2.0.0-beta.185",
-    "vuepress-plugin-rtl": "2.0.0-beta.191",
-    "vuepress-plugin-search-pro": "2.0.0-beta.185",
-    "vuepress-plugin-seo2": "2.0.0-beta.191",
-    "vuepress-plugin-sitemap2": "2.0.0-beta.191",
-    "vuepress-theme-hope": "2.0.0-beta.185"
+  "engines": {
+    "node": "^18.0.0 || >= 20.0.0"
   },
-  "dependencies": {
-    "@vuepress/core": "^1.9.9",
-    "@vuepress/shared-utils": "^1.9.9",
+  "packageManager": "pnpm@8.10.2",
+  "devDependencies": {
+    "@vuepress/client": "2.0.0-beta.67",
+    "@vuepress/utils": "2.0.0-beta.67",
     "cross-env": "^7.0.3",
-    "vuepress-plugin-sass-palette": "2.0.0-beta.191",
-    "vuepress-shared": "2.0.0-beta.191"
+    "nan": "^2.18.0",
+    "standard-version": "^9.5.0",
+    "vue": "^3.3.7",
+    "vuepress": "2.0.0-beta.67",
+    "vuepress-plugin-redirect": "2.0.0-beta.245",
+    "vuepress-plugin-search-pro": "2.0.0-beta.245",
+    "vuepress-theme-hope": "2.0.0-beta.245"
   }
 }
